Name: yesod-lucid
Version: 0.1
Synopsis: Lucid support for Yesod
Description: Allows using Lucid to generate html in a yesod site.
License: BSD3
License-File: LICENSE
Author: Chris Done
Maintainer: Joey Hess <id@joeyh.name>
Copyright: 2014 Chris Done
Category: Web, Yesod
Build-Type: Simple
Cabal-Version: >= 1.8

Library
  GHC-Options: -Wall
  Exposed-Modules: Yesod.Lucid
  Build-Depends: base (>= 4.5), base < 5
               , yesod-core
               , lucid
               , monads-tf
               , text

source-repository head
  type: git
  location: git://git.joeyh.name/yesod-lucid.git
